--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@ body {
   background-color: #ffffff;
   border-radius: 0.625rem;
 }
-.container .card .title {
+.container .card__title {
   text-align: center;
   letter-spacing: 2px;
 }
